Media Queries ex. corrected by using flex-wrap

--- a/Media Queries/style.css
+++ b/Media Queries/style.css
@@ -4,7 +4,8 @@
 
 .container{
 width: 100%;
-display: grid;
+display: flex;
+flex-wrap: wrap;
 grid-column-gap: 1rem;
 grid-template-columns: 1fr 1fr 1fr;
 }
@@ -67,19 +68,3 @@ grid-template-columns: 1fr 1fr 1fr;
    margin-top: 2px;
    margin-left: 8px;
 }
-
-/*Responsive rules*/
-
-@media screen and (max-width: 375px) {
-    
-    .container{
-      grid-template-columns: 1fr;
-    }
-}
-@media screen and (max-width: 768px) {
-    
-    .container{
-        grid-template-columns: 1fr 1fr;
-      }
-
-    }
